2005-01-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/t/tiff/read.t: Added test for reading truecolor
	planar TIFF image.
	* coders/tiff.c (ReadTIFFImage):  Fixed stripped TIFF reader.

2005-01-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Only set TIFFTAG_PREDICTOR to 2
	for bits-per-sample values that libtiff supports.

2004-12-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Fix overflow while computing
	colormap size.
	* magick/image.h (MaxRGBGivenBits): New macro to obtain maximum
	value represented in a given number of bits.

2004-12-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): TrueColor 16-bits/sample RGB
	images were being written incorrectly on little-endian CPUs.
	Added byte swapping to fix this problem.

2004-12-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/bmp.c (WriteBMPImage): Handle the case where the image
	has an over-sized colormap.  Was writing on unallocated heap memory.
	* coders/dib.c (WriteDIBImage): Handle the case where the image
	has an over-sized colormap.  Was writing on unallocated heap memory.

2004-12-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/gem.c (Modulate): Hue argument now represents a rotation
	from -180 degrees to +180 degrees expressed as an argument of 0 to
	2.0 (1.0 for no change). Note that this change also effects the
	-modulate argument and the Magick++ modulate method(). This change
	is made because the previous hue adjustment strategy only
	succeeded in corrupting the image.

2004-12-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/nt_base.c (opendir): Ensure that data may not overwrite
	the stack.
	(readdir): Ensure that data may not overwrite the stack.

2004-11-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Pick up font search code from CVS head so that