@@ -24,6 +24,8 @@
 2005-01-08  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> coders/jp2.c (ReadJP2Image): Handle images in YCBCR colorspace.
+        Retrieve and store an ICC ICM color profile if present.
   <LI> PerlMagick/t/tiff/read.t: Added test for reading truecolor
         planar TIFF image.<BR>
   <LI> coders/tiff.c (ReadTIFFImage):  Fixed stripped TIFF reader.
