@@ -1,5 +1,7 @@
 2005-01-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/jp2.c (ReadJP2Image): Handle images in YCBCR colorspace.
+	Retrieve and store an ICC ICM color profile if present.
 	* PerlMagick/t/tiff/read.t: Added test for reading truecolor
 	planar TIFF image.
 	* coders/tiff.c (ReadTIFFImage):  Fixed stripped TIFF reader.
